--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="creditcard__info">
                                 <div class="creditcard__service">
                                     <div class="creditcard__sum">490 Р.-</div>
-                                    <p class="creditcard__desc">Обсллуживание карты</p>
+                                    <p class="creditcard__desc">Обслуживание карты</p>
                                 </div>
                                 <div class="creditcard__cashback">
                                     <div class="creditcard__sum">до 6 %</div>
