--- a/services.html
+++ b/services.html
@@ -21,8 +21,8 @@
                             </div>
                             <nav class="main-menu header__main-menu">
                             <ul class="main-menu__list">
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Главная</a></li>
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Услуги</a></li>
+                                <li class="main-menu__item"><a href="./" class="main-menu__link">Главная</a></li>
+                                <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
                                 <li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
                             </ul>
                             </nav>
@@ -136,8 +136,8 @@
                         
                         <nav class="main-menu footer__main-menu">
                             <ul class="main-menu__list">
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Главная</a></li>
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Услуги</a></li>
+                                <li class="main-menu__item"><a href="./" class="main-menu__link">Главная</a></li>
+                                <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
                                 <li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
