--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <div class="page-top">
             <header class="header header_style_default">
 
-                    <div class="container header__container">
+                    <div class="container header__container container_width_1200">
                         <div class="header__col header__col_align_left">
                             <div class="logo header__logo">
                                 <a href="/" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
