--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
                 <div class="container container_width_1200">
 
                     <ul class="services__list">
-                        <li class="services__item article-preview">
+                        <li class="services__item">
                             <a href="#" class="article-preview">
                                 <div class="article-preview__image">
                                     <img src="./img/services/key.png" alt="#" class="article-preview__img">
@@ -76,7 +76,7 @@
                             </a>
                             
                         </li>
-                        <li class="services__item article-preview">
+                        <li class="services__item">
                             <a href="#" class="article-preview">
                                 <div class="article-preview__image">
                                     <img src="./img/services/couple.png" alt="#" class="article-preview__img">
