--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         </main> 
         <footer class="footer">
-            <div class="container footer__container_main">
+            <div class="container footer__container footer__container_main">
                 <div class="footer__col footer__col_align_left">
                     <div class="logo footer__logo">
                         <a href="./" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
