--- a/services.html
+++ b/services.html
@@ -69,7 +69,10 @@
                                 <div class="article-preview__text">
                                     <h3 class="article-preview__title">Автокредит под 17% годовых на 1000 лет + страховка</h3>
                                     <div class="article-preview__desc">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. </div>
-                                    <div class="article-preview__button button button_style_dark">Подробнее</div>
+                                    <div class="article-preview__button button button_style_dark">
+                                        <span class="article-preview__more">Подробнее</span>
+                                        <span class="article-preview__send">Отправить</span>
+                                    </div>
                                 </div>
                             </a>
                             
@@ -81,7 +84,10 @@
                                 </div>                            <div class="article-preview__text">
                                     <h3 class="article-preview__title">Ипотека под 9% годовых на 35 лет и душу впридачу</h3>
                                     <div class="article-preview__desc">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. </div>
-                                    <div class="article-preview__button button button_style_dark">Отправить</div>
+                                    <div class="article-preview__button button button_style_dark">
+                                        <span class="article-preview__more">Подробнее</span>
+                                        <span class="article-preview__send">Отправить</span>
+                                    </div>
                                 </div>
                             </a>
                             
