--- a/services.html
+++ b/services.html
@@ -47,8 +47,8 @@
             <div class="container page-top__container">
                 <h1 class="page-top__title">Услуги</h1>
                 <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Главная</a></li>
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link active">Услуги</a></li>
+                    <li class="breadcrumbs__item"><a href="./" class="breadcrumbs__link">Главная</a></li>
+                    <li class="breadcrumbs__item"><a href="./services.html" class="breadcrumbs__link active">Услуги</a></li>
                 </ul>
             </div>
         </div>
