--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
                         <li class="services__item">
                             <a href="#" class="article-preview">
                                 <div class="article-preview__image">
-                                    <img src="./img/services/key.png" alt="#" class="article-preview__img">
+                                    <img src="./img/services/key.png" alt="Изображение" class="article-preview__img">
                                 </div>
                                 
                                 <div class="article-preview__text">
@@ -80,7 +80,7 @@
                         <li class="services__item">
                             <a href="#" class="article-preview">
                                 <div class="article-preview__image">
-                                    <img src="./img/services/couple.png" alt="#" class="article-preview__img">
+                                    <img src="./img/services/couple.png" alt="Изображение" class="article-preview__img">
                                 </div>                            <div class="article-preview__text">
                                     <h3 class="article-preview__title">Ипотека под 9% годовых на 35 лет и душу впридачу</h3>
                                     <div class="article-preview__desc">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. </div>
