--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=1180">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/vnd.microsoft.icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="icon" href="./img/favicon.png" /> 
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <title>Lion Bank — Банк с львиным характером</title>
 </head>
