--- a/services.html
+++ b/services.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=1240">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/vnd.microsoft.icon" href="./img/favicon.png">
-    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
-    <link rel="icon" href="./img/favicon.png" /> 
+    <link rel="icon" type="image/vnd.microsoft.icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" /> 
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <title>Услуги</title>
 </head>
