--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" type="image/vnd.microsoft.icon" href="./favicon.ico">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" href="./favicon.ico" /> 
+    <link rel="icon" type="image/vnd.microsoft.icon" href="./favicon.png">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <link rel="icon" href="./favicon.png" /> 
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <title>Lion Bank — Банк с львиным характером</title>
 </head>
