--- a/services.html
+++ b/services.html
@@ -18,13 +18,13 @@
                     <div class="container header__container">
                         <div class="header__col header__col_align_left">
                             <div class="logo header__logo">
-                                <a href="./" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
+                                <a href="./main.html" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
                             </div>
                             <nav class="main-menu header__main-menu">
                             <ul class="main-menu__list">
-                                <li class="main-menu__item"><a href="./" class="main-menu__link">Главная</a></li>
+                                <li class="main-menu__item"><a href="./main.html" class="main-menu__link">Главная</a></li>
                                 <li class="main-menu__item"><a href="./services.html" class="main-menu__link active">Услуги</a></li>
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
+                                <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link">Отзывы</a></li>
                             </ul>
                             </nav>
                         </div>
@@ -119,7 +119,7 @@
 
         <section class="partners partners_position_main">
             <div class="container">
-                <h2 class="partners__title title_style_second">Партнёры</h2>
+                <h2 class="partners__title title_style_third">Партнёры</h2>
                 <ul class="partners__list">
                     <li class="partner partners__item"><a href="#" class="partner__link"><img src="./img/partners/yandex.png" alt="Yandex" class="partner__img"></a></li>
                     <li class="partner partners__item"><a href="#" class="partner__link"><img src="./img/partners/rambler.png" alt="Rambler" class="partner__img"></a></li>
@@ -138,14 +138,14 @@
                 <div class="container footer__container footer__container_default">
                     <div class="footer__col footer__col_align_left">
                         <div class="logo footer__logo">
-                            <a href="./" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
+                            <a href="./main.html" class="logo__link" title="Lion Bank"><img src="./img/logo.png" class="logo__img" alt="Lion Bank"></a>
                         </div>
                         
                         <nav class="main-menu footer__main-menu">
                             <ul class="main-menu__list">
-                                <li class="main-menu__item"><a href="./" class="main-menu__link">Главная</a></li>
+                                <li class="main-menu__item"><a href="./main.html" class="main-menu__link">Главная</a></li>
                                 <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
-                                <li class="main-menu__item"><a href="#" class="main-menu__link">Отзывы</a></li>
+                                <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
