--- a/feedback.html
+++ b/feedback.html
@@ -50,7 +50,7 @@
             <div class="container page-top__container">
                 <h1 class="page-top__title">Отзывы</h1>
                 <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a href="./" class="breadcrumbs__link">Главная</a></li>
+                    <li class="breadcrumbs__item"><a href="./main.html" class="breadcrumbs__link">Главная</a></li>
                     <li class="breadcrumbs__item"><a href="./services.html" class="breadcrumbs__link active">Отзывы</a></li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
                 <ul class="feedback__list">
                     <li class="feedback__item review">
                         <div class="review__head">
-                            <div class="review__avatar avatar"><img src="./img/avatar/avatar.png" alt="Пользователь" class="avatar__img"></div>
+                            <div class="review__avatar avatar"><img src="./img/avatar/avatar1.png" alt="Пользователь" class="avatar__img"></div>
                             <div class="review__user">
                                 <a href="#" class="review__username">Иван Петрович</a>
                                 <ul class="review__tags">
@@ -83,7 +83,7 @@
 
                     <li class="feedback__item review">
                         <div class="review__head">
-                            <div class="review__avatar avatar"><img src="./img/avatar/avatar.png" alt="Пользователь" class="avatar__img"></div>
+                            <div class="review__avatar avatar"><img src="./img/avatar/avatar3.png" alt="Пользователь" class="avatar__img"></div>
                             <div class="review__user">
                                 <a href="#" class="review__username">Лиза Сидорова</a>
                                 <ul class="review__tags">
@@ -100,7 +100,7 @@
 
                     <li class="feedback__item review">
                         <div class="review__head">
-                            <div class="review__avatar avatar"><img src="./img/avatar/avatar.png" alt="Пользователь" class="avatar__img"></div>
+                            <div class="review__avatar avatar"><img src="./img/avatar/avatar2.png" alt="Пользователь" class="avatar__img"></div>
                             <div class="review__user">
                                 <a href="#" class="review__username">Екатерина Жмых</a>
                                 <ul class="review__tags">
@@ -118,7 +118,7 @@
 
                     <li class="feedback__item review">
                         <div class="review__head">
-                            <div class="review__avatar avatar"><img src="./img/avatar/avatar.png" alt="Пользователь" class="avatar__img"></div>
+                            <div class="review__avatar avatar"><img src="./img/avatar/avatar4.png" alt="Пользователь" class="avatar__img"></div>
                             <div class="review__user">
                                 <a href="#" class="review__username">Антон Игоревич</a>
                                 <ul class="review__tags">
@@ -181,7 +181,7 @@
                         <ul class="controls">
                             <li class="controls__item">
                                 <label class="controls__element">
-                                    <input type="checkbox" class="controls__checkbox">
+                                    <input type="checkbox" class="controls__checkbox" checked>
                                     <div class="tag controls__tag">Карта  базовая</div>
                                 </label>
                             </li>
@@ -263,7 +263,7 @@
                             <ul class="main-menu__list">
                                 <li class="main-menu__item"><a href="./main.html" class="main-menu__link">Главная</a></li>
                                 <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
-                                <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link">Отзывы</a></li>
+                                <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link active">Отзывы</a></li>
                             </ul>
                         </nav>
                     </div>
