--- a/main.html
+++ b/main.html
@@ -196,7 +196,7 @@
                     
                     <nav class="main-menu footer__main-menu">
                         <ul class="main-menu__list">
-                            <li class="main-menu__item"><a href="./main.html" class="main-menu__link">Главная</a></li>
+                            <li class="main-menu__item"><a href="./main.html" class="main-menu__link active">Главная</a></li>
                             <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
                             <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link">Отзывы</a></li>
                         </ul>
