--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
             <div class="container page-top__container">
                 <h1 class="page-top__title">Услуги</h1>
                 <ul class="breadcrumbs">
-                    <li class="breadcrumbs__item"><a href="./" class="breadcrumbs__link">Главная</a></li>
+                    <li class="breadcrumbs__item"><a href="./main.html" class="breadcrumbs__link">Главная</a></li>
                     <li class="breadcrumbs__item"><a href="./services.html" class="breadcrumbs__link active">Услуги</a></li>
                 </ul>
             </div>
@@ -144,7 +144,7 @@
                         <nav class="main-menu footer__main-menu">
                             <ul class="main-menu__list">
                                 <li class="main-menu__item"><a href="./main.html" class="main-menu__link">Главная</a></li>
-                                <li class="main-menu__item"><a href="./services.html" class="main-menu__link">Услуги</a></li>
+                                <li class="main-menu__item"><a href="./services.html" class="main-menu__link active">Услуги</a></li>
                                 <li class="main-menu__item"><a href="./feedback.html" class="main-menu__link">Отзывы</a></li>
                             </ul>
                         </nav>
