--- a/feedback.html
+++ b/feedback.html
@@ -157,7 +157,9 @@
 
         <section class="ad ad_position_reviews ad_bg_orange">
             <div class="container ad__container">
-                <img src="./img/ad/ad.png" alt="" class="ad__img">
+                <div class="ad__pic">
+                    <img src="./img/ad/ad.png" alt="" class="ad__img">
+                </div>
                 <div class="ad__text">
                     LionBank-Онлайн
                     Простой способ зайти в банк
@@ -174,7 +176,7 @@
                         <input type="text" class="form__input" placeholder="Ссылка на профиль VK">
                     </div>
                     <div class="form__row">
-                        <textarea class="form__input form__input_textarea" placeholder="Добавьте свой честный отзыв :)"></textarea>
+                        <textarea class="form__input form__input_textarea" placeholder="Напишите свой честный отзыв :)"></textarea>
                     </div>
                     <div class="form__row form__controls">
                         <div class="form__controls-title">Какими услугами банка пользуетесь?</div>
@@ -182,61 +184,61 @@
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox" checked>
-                                    <div class="tag controls__tag">Карта  базовая</div>
+                                    <div class="tag controls__tag tag_size_form">Карта  базовая</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Ипотека на 10 лет</div>
+                                    <div class="tag controls__tag tag_size_form">Ипотека на 10 лет</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Карта оптима</div>
+                                    <div class="tag controls__tag tag_size_form">Карта оптима</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Ипотека на 10 лет</div>
+                                    <div class="tag controls__tag tag_size_form">Ипотека на 10 лет</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Никакими</div>
+                                    <div class="tag controls__tag tag_size_form">Никакими</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Ипотека на 20 лет</div>
+                                    <div class="tag controls__tag tag_size_form">Ипотека на 20 лет</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Другое</div>
+                                    <div class="tag controls__tag tag_size_form">Другое</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Страхование</div>
+                                    <div class="tag controls__tag tag_size_form">Страхование</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Кредитная карта</div>
+                                    <div class="tag controls__tag tag_size_form">Кредитная карта</div>
                                 </label>
                             </li>
                             <li class="controls__item">
                                 <label class="controls__element">
                                     <input type="checkbox" class="controls__checkbox">
-                                    <div class="tag controls__tag">Автокредит на 7 лет</div>
+                                    <div class="tag controls__tag tag_size_form">Автокредит на 7 лет</div>
                                 </label>
                             </li>
                         </ul>
